Shapekey w/ Driver - Shapekey Influences Disappears After Going to Edit Mode #31569

Closed
opened 2012-05-23 12:51:50 +02:00 by David Brennan · 8 comments

%%%I have a very primitive, stick-figure like character I use to teach myself new techniques. In this case, I'm learning ShapeKey Drivers.

I built one ShapeKey (and its Driver) for one shoulder, and then created a second ShapeKey for the other shoulder.

However, immediately after tabbing into Edit Mode to set up this second ShapeKey and then going back to Object Mode....the effect of the first ShapeKey had vanished! All of the settings appear absolutely proper: I checked everything that I could think of.

All it takes to trigger this bug is very simple:

Select one of the other ShapeKeys >
Tab into Edit Mode >
Tab out of Edit Mode

Try this on the attached .Blend. You'll immediately see that the influence of the initial ShapeKey is completely gone.

Windows XP; 32-Bit
Blender 2.63
r45996%%%

%%%I have a very primitive, stick-figure like character I use to teach myself new techniques. In this case, I'm learning ShapeKey Drivers. I built one ShapeKey (and its Driver) for one shoulder, and then created a second ShapeKey for the other shoulder. However, immediately after tabbing into Edit Mode to set up this second ShapeKey and then going back to Object Mode....the effect of the first ShapeKey had vanished! All of the settings appear absolutely proper: I checked everything that I could think of. All it takes to trigger this bug is very simple: Select one of the other ShapeKeys > Tab into Edit Mode > Tab out of Edit Mode Try this on the attached .Blend. You'll immediately see that the influence of the initial ShapeKey is completely gone. Windows XP; 32-Bit Blender 2.63 r45996%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Here is a screencap of the issue with some comments:

http://i1222.photobucket.com/albums/dd499/ComicsPlus3/ShapeKeyProblem.png%%%

%%%Here is a screencap of the issue with some comments: http://i1222.photobucket.com/albums/dd499/ComicsPlus3/ShapeKeyProblem.png%%%
Member

%%%Confirm. On initial inspection, it doesn't appear to be anything on the animsys side, so perhaps one of the mysterious-evil lock that used to plague shapekeys in 2.4x has inadvertently come back from the dead.%%%

%%%Confirm. On initial inspection, it doesn't appear to be anything on the animsys side, so perhaps one of the mysterious-evil lock that used to plague shapekeys in 2.4x has inadvertently come back from the dead.%%%
Author

%%%Not to press too hard, but is there any estimate (just an estimate) about when this bug might be fixed? I have postponed my project until the ShapeKey drivers work, and if this isn't likely to be fixed for a long time, then I will have to change my plans and use some work-arounds. (In the past, bugs seem to have been fixed within a couple of days.)

Again, not trying to be pushy, I'm just seeking information. Thanks as always.%%%

%%%Not to press too hard, but is there any estimate (just an estimate) about when this bug might be fixed? I have postponed my project until the ShapeKey drivers work, and if this isn't likely to be fixed for a long time, then I will have to change my plans and use some work-arounds. (In the past, bugs seem to have been fixed within a couple of days.) Again, not trying to be pushy, I'm just seeking information. Thanks as always.%%%

%%%Fixed r50727, r50728.%%%

%%%Fixed r50727, r50728.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thanks so much, Campbell Barton!

This will help me, and then probably tons of other users who either thought that they're doing something wrong or else they didn't fill out a Bug Report.

Thanks again to everybody at Blender. God bless!%%%

%%%Thanks so much, Campbell Barton! This will help me, and then probably tons of other users who either thought that they're doing something wrong or else they didn't fill out a Bug Report. Thanks again to everybody at Blender. God bless!%%%

%%%@david-20, & thanks for reporting :), I've been going over shape key buts recently and there are a few problems with 2.63's shape key support (from the bmesh merge), expect 2.64 to be much improved!%%%

%%%@david-20, & thanks for reporting :), I've been going over shape key buts recently and there are a few problems with 2.63's shape key support (from the bmesh merge), expect 2.64 to be much improved!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31569
No description provided.