fix [#31569] Shapekey w/ Driver - Shapekey Influences Disappears After Going to Edit Mode

joining meshes would allow shape key UID's not to be unique.
This was caused by join adding new key blocks inline, now use add_keyblock() like everywhere else does.